# video-comparison-with-RAG-BE

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  logger.py  main.py  models.py  schemas.py  session_service.py  state_keys.py
app/agents/: analysis_agent.py  chat.py  final_agent.py  graph.py  pipeline.py  rag_agent.py  root_agent.py  router.py
app/agents/analysis/: __init__.py  _gate.py  comparator.py  metadata_lookup.py  reducer.py  router.py  summarizer.py  timeline.py  virality.py
app/agents/rag/: __init__.py  grader.py  packer.py  planner.py  retriever.py
app/chunking/: chunker.py
app/db/: jsonb.py  migrate.py  pool.py  repository.py
app/embeddings/: openai_embed.py
app/ingestion/: __init__.py  detector.py  engagement.py  errors.py  fetcher.py  subtitle_fetch.py  youtube_oembed.py  youtube_transcript.py  ytdlp_cookies.py  ytdlp_meta.py  ytdlp_opts.py
app/prompts/: analysis.py  analysis_comparator.py  analysis_router.py  analysis_summarizer.py  analysis_timeline.py  analysis_virality.py  final.py  rag.py  rag_grader.py  rag_planner.py  root.py
app/routes/: auth.py  chat.py  comparisons.py  health.py  init.py  sessions.py
app/services/: auth.py  google_auth.py  ingest.py  ingest_client.py  logger.py  retrieval_client.py
app/utils/: citations.py  cost.py
migrations/: 01_schema_migrations.sql  02_users.sql  03_comparisons.sql  04_messages.sql
notebooks/: test_chat.ipynb
scripts/: apply_schema.py
supabase/migrations/: 001_schema.sql
