[project]
name = "video-rag-brain"
version = "0.1.0"
description = "Cognitive layer for multi-agent YouTube video analysis (Google ADK + LiteLLM + FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.31.1",
    "litellm==1.82.6",
    "fastapi>=0.124.1,<1.0.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.22.1",
    "google-auth>=2.0",
]

[tool.uv]
package = false
